--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "core-js": "^3.8.3",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.1.3",
     "vue": "^3.2.13"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
